--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="/img/logo.png" width="40" height="40" />
+                    <img src="/img/logo.png" width="40" height="40" id="logoPIRES" />
                 </a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PIRESQuestions</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
