fix: supp privacy

--- a/PIRESQuestions/PIRESQuestions/Views/Dashboard/Index.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Dashboard/Index.cshtml
@@ -21,6 +21,7 @@
                             </p>
                         }
                     }
+                    <a type="button" class="btn btn-modif" asp-controller="Form" asp-action="Create">Ajouter un formulaire</a>
                 </div>
             </div>
         </div>
