fix : suup privacy

--- a/PIRESQuestions/PIRESQuestions/Views/Form/Index.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Index.cshtml
@@ -5,4 +5,4 @@
     <partial name="_displayForms" model="Model" />
 </div>
 
-<a type="button" class="btn btn-primary" asp-action="Create">Ajouter un formulaire</a>
+<a type="button" class="btn btn-modif" asp-action="Create">Ajouter un formulaire</a>
